# ChangeLog for games-action/openlierox
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-action/openlierox/ChangeLog,v 1.3 2010/01/13 22:32:34 sping Exp $

  13 Jan 2010; Sebastian Pipping <sping@gentoo.org>
  openlierox-0.58_beta9-r1.ebuild:
  Move to media-libs/gd[png] for bug #300901

  12 Jan 2010; Sebastian Pipping <sping@gentoo.org>
  openlierox-0.58_beta9-r1.ebuild,
  +files/openlierox-0.58-beta9-joystick-cmake.patch,
  +files/openlierox-0.58-beta9-joystick-cpp.patch:
  Integrate joystick patches from upstream (fixes #300640)

*openlierox-0.58_beta9-r1 (10 Jan 2010)

  10 Jan 2010; Sebastian Pipping <sping@gentoo.org>
  +openlierox-0.58_beta9-r1.ebuild, +metadata.xml:
  New package (fixes bug #164009)
