@@ -1,6 +1,12 @@
 # ChangeLog for games-action/openlierox
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/openlierox/ChangeLog,v 1.3 2010/01/13 22:32:34 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-action/openlierox/ChangeLog,v 1.4 2010/01/24 18:09:50 sping Exp $
+
+*openlierox-0.58_rc1 (24 Jan 2010)
+
+  24 Jan 2010; Sebastian Pipping <sping@gentoo.org>
+  +openlierox-0.58_rc1.ebuild:
+  Trivial-bump to 0.58_rc1
 
   13 Jan 2010; Sebastian Pipping <sping@gentoo.org>
   openlierox-0.58_beta9-r1.ebuild:
